# ml-workspace

./: .dockerignore  .gitignore
docker/: base.Dockerfile  build steps.md  build.bat  build.sh  docker-compose.yml  final.Dockerfile  gui.Dockerfile  jupyter.Dockerfile  python.Dockerfile  runtimes.Dockerfile
resources/jupyter/labextension/: MANIFEST.in  README.md  package-lock.json  package.json  setup.py  tsconfig.json
resources/jupyter/labextension/jupyter_tooling/: __init__.py  handlers.py
resources/jupyter/labextension/lib/: tsconfig.tsbuildinfo
resources/jupyter/labextension/lib/src/: index.d.ts  index.js
resources/jupyter/labextension/lib/src/components/: ToolingWidget.d.ts  ToolingWidget.js
resources/jupyter/labextension/lib/src/handlers/: GitInfoHandler.d.ts  GitInfoHandler.js  SSHHandler.d.ts  SSHHandler.js  StorageCheckHandler.d.ts  StorageCheckHandler.js  ToolingHandler.d.ts  ToolingHandler.js
resources/jupyter/labextension/schema/: jupyter_tooling.json
resources/jupyter/labextension/src/: index.ts
resources/jupyter/labextension/src/components/: ToolingWidget.tsx
resources/jupyter/labextension/src/handlers/: GitInfoHandler.ts  SSHHandler.ts  StorageCheckHandler.ts  ToolingHandler.ts
resources/jupyter/labextension/static/: package.json
resources/jupyter/labextension/static/static/: 307.0a0e7ea3b719258eafd2.js  665.88d5c83e87297e88c092.js  remoteEntry.31639b797643198de4a1.js  style.js
resources/jupyter/labextension/style/: index.css
resources/jupyter/tooling/: .copier-answers.yml  .gitignore  .prettierignore  AGENTS.md  LICENSE  README.md  RELEASE.md  conftest.py  install.json  package.json  pyproject.toml
resources/jupyter/tooling/.github/workflows/: build.yml  check-release.yml
resources/jupyter/tooling/binder/: environment.yml  postBuild
resources/jupyter/tooling/jupyter-config/server-config/: jupyterTooling.json
resources/jupyter/tooling/jupyterTooling/: __init__.py  routes.py
resources/jupyter/tooling/jupyterTooling/tests/: __init__.py  test_routes.py
resources/jupyter/tooling/schema/: plugin.json
resources/jupyter/tooling/src/: api.ts  commands.ts  index.ts  request.ts
resources/jupyter/tooling/src/__tests__/: jupyterTooling.spec.ts
resources/jupyter/tooling/src/widgets/: CommitDialog.tsx  StorageWarningDialog.tsx  ToolsMenuWidget.tsx
resources/jupyter/tooling/style/: index.css
resources/jupyter/tooling/ui-tests/: package.json
resources/jupyter/tooling/ui-tests/tests/: jupyterTooling.spec.ts
resources/libraries/: requirements-full.txt  requirements-light.txt  requirements-minimal.txt
resources/scripts/: clean-layer.sh
resources/tools/: fasttext.sh  filebrowser.sh  firefox.sh  vs-code-desktop.sh  vs-code-server.sh
resources/tutorials/tutorials/: visualization-tutorial.ipynb
(+1 files in other folders)
